# OpenCl_

./: .gitignore  Build.sh  Build_Test.sh  CMakeLists.txt  ReBuild.sh  Test.sh  add.cl  build.bat  main.cpp  main_GPU.cpp  rebuild.bat
General/: CMakeLists.txt
Intel_Kernels/: CmakeLists.txt
Intel_Kernels/include/: OCL.h  OCL_Kernel_factory.h
Intel_Kernels/src/: OCL.cpp  OCL_Kernel_factory.cpp
Kernels/: CMakeLists.txt
Kernels/Kernels/: add.cl
Kernels/include/: Device.hpp  Platform.hpp  Utils.hpp
Kernels/src/: Device.cpp  Platform.cpp  Utils.cpp
Test/: CMakeLists.txt  Test_all.cpp
Test/Kernels/: Device_unit_test.cpp  Platform_unit_test.cpp
Test/Opencl/: Device_unit_test.cpp  Platform_unit_test.cpp  Utils_unit_test.cpp
Utility/: CmakeLists.txt
Utility/include/: Def.h
Utility/src/: Def.cpp
ds/: CMakeLists.txt
